# SeedPass

./: .gitattributes  .gitignore  .gitleaks.toml  .memory-file-path  .pre-commit-config.yaml  .task-log-path  AGENTS.md  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  LICENSE  OVERSTORY_SWARM_TUTORIAL.md  PROTOCOL_INVENTORY.md  README.md  SeedPass.spec  TODO.md  dev-plan.md  ignore_check.txt  memory-update.md  package-lock.json  package.json  patch.py  post-refactor-to-do.md  pyproject.toml  pytest.ini  refactor.md  run_flake_tests.sh  temp-store-memory.md  test_atomic_write_perms.py  test_replace8.py  torch-config.json  torch-garbage-collection-agent-memory.md  verify_fix.py
.github/workflows/: briefcase.yml  dependency-audit.yml  installer-smoke.yml  python-ci.yml  release-integrity.yml  release.yml  tests.yml
.mulch/: mulch.config.yaml
.mulch/expertise/: architecture.jsonl  seedpass.jsonl
.overstory/: agent-manifest.json  config.yaml  groups.json
.scheduler-memory/: memory-store.json  memory-update.md
.scheduler-memory/2026-02-26T02-50-34Z/: retrieve.json
.scheduler-memory/2026-02-26T02-52-10Z/: retrieve.json  store.json
.scheduler-memory/session-mm2dqdpm/: retrieve.json
.scheduler-memory/session-mm2dqdpn/: store.json
.scheduler-memory/session-mm2f72or/: retrieve.json
.scheduler-memory/session-mm2f8599/: store.json
.scheduler-memory/session-mm2gkvfj/: retrieve.json
.scheduler-memory/session-mm2gkx2b/: store.json
.scheduler-memory/session-mm2h5s9z/: retrieve.json
.scheduler-memory/session-mm2h5twt/: store.json
.scheduler-memory/session-mm2jk9lj/: retrieve.json
.scheduler-memory/session-mm2jog2v/: store.json
.scheduler-memory/session-mm2uvrqv/: retrieve.json
.scheduler-memory/session-mm2v0xuc/: store.json
.scheduler-memory/session-mm2vg4ql/: retrieve.json
.scheduler-memory/session-mm2vhz8d/: store.json
.scheduler-memory/session-mm2vjk9b/: retrieve.json
.scheduler-memory/session-mm2vryrb/: store.json
.scheduler-memory/session-mm2vsrtm/: retrieve.json
.scheduler-memory/session-mm2vx4hn/: store.json
.scheduler-memory/session-mm3sewda/: retrieve.json
.scheduler-memory/session-mm3sfj4i/: store.json
.scheduler-memory/session-mm3u1t5b/: retrieve.json
.scheduler-memory/session-mm3w5633/: retrieve.json
.scheduler-memory/session-mm3w6j6s/: store.json
.scheduler-memory/session-mm3yluve/: retrieve.json
.scheduler-memory/session-mm3ymzdv/: store.json
.scheduler-memory/session-mm40pypl/: retrieve.json
.scheduler-memory/session-mm40uz6h/: store.json
.scheduler-memory/session-mm42vmce/: retrieve.json
.scheduler-memory/session-mm42wrc2/: store.json
.scheduler-memory/session-mm430xcj/: store.json
.scheduler-memory/session-mm44rf4p/: retrieve.json
.scheduler-memory/session-mm44wkva/: store.json
.scheduler-memory/session-mm4505ym/: store.json
.scheduler-memory/session-mm46yv2s/: retrieve.json
.seeds/: config.yaml  issues.jsonl
SeedPass Logo/: ASCII_LOGO.txt  SeedPass-Logo.ai
UI_mockups/: SeedPass UI.penpot
artifacts/: ci-flakes-2026-02-27.md  ci-flakes-20263828.md  ci-flakes-20264528.md  todo-triage-issues.txt  todos.txt
docs/: ARCHITECTURE.md  INTERACTIVE_AGENT_TESTING.md  README.md  SPEC.md  TEST_INVENTORY.md  advanced_cli.md  agent_autonomy_security_plan.md  agent_test_format.md  agent_testing_roadmap.md  ai_agent_tui_testing.md  api_reference.md  atlas_search_graph_integration_plan_2026-03-05.md  auth_lock_unlock_access_review.md  beta_hardening_2026-03-02.md  build-docs.js  ci-health-2026-02-19.md  crypto_key_management_review.md  dev_control_center.md  entry_graph.md  entry_types.md  fingerprint_seeds.md  index0_atlas_execution_plan_2026-03-05.md  index0_phase0_spec_2026-03-05.md  installer_testing.md  json_entries.md  kb_scale_validation.md  netlify.toml  nostr_comms_reference_and_future_capability_2026-03-05.md  nostr_namespace_reset.md  nostr_setup.md  operational_runbooks.md  overstory_quick_reference.md  package-lock.json  package.json  packaging.md  policy_as_code.md  release_protection_policy.md  release_verification_runbook.md  secret-scanning.md  secret_handling_local_exposure_review.md  (+18 more)
examples/: entry_management_demo.py  password_manager_demo.py
features/: export-json-to-csv.py
landing/: SeedPass_Chart.mmd  docs.css  docs.html  docs.js  index.html  script.js  simple-dark.css  style.css  tip-jar.html
logo/: SeedPass-Logo.ai
memory-updates/: 2026-02-25T20-00-03Z__governance-agent.md  2026-02-25T20-16-19Z__innerhtml-migration-agent.md  2026-02-26T02-56-14Z__onboarding-audit-agent.md  2026-02-27T03-20-00Z__audit-agent.md  2026-03-01T21-45-00Z__content-audit-agent.md  feature-proposer-agent.md  legacy-2026-02-26T13-32-55Z.md  simulated-learning.md
packaging/: build-linux.sh  build-macos.sh  build-windows.ps1  snapcraft.yaml
perf/: perf_agent.py
releases/: draft-20260228.md
scripts/: ai_tui2_agent_test.py  ai_tui_agent_test.py  check_critical_coverage.py  check_determinism_suite.py  dependency_scan.sh  generate_test_profile.py  install.ps1  install.sh  installer_smoke_unix.sh  installer_smoke_windows.ps1  interactive_agent_tui_test.py  release_integrity.py  run_ci_tests.sh  run_determinism_tests.sh  run_gui_tests.sh  tui2_check_smoke.sh  tui2_coverage_gate.sh  tui3_coverage_gate.sh  uninstall.ps1  uninstall.sh  update_checksum.py  vendor_dependencies.sh
src/: constants.py  main.py  repo-context.txt  requirements.txt  run_gui.py  runtime_requirements.txt  saved_config.yaml  test_post.py
src/bip85/: bip85.py  (+1 more)
tests/: test_entries_empty.py  test_entry_add.py  test_nostr_backup.py  test_seed_import.py
torch/: KNOWN_ISSUES.md  META_PROMPTS.md  TORCH.md  daily-scheduler.md  eslint.config.mjs  package-lock.json  package.json  scheduler-flow.md  scheduler.py  torch-config.json  weekly-scheduler.md
(+925 files in other folders)
