[tool.poetry]
name = "seedpass"
version = "0.1.0"
description = "Deterministic password manager with a BeeWare GUI"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
colorama = ">=0.4.6"
termcolor = ">=1.1.0"
cryptography = ">=40.0.2"
bip-utils = ">=2.5.0"
bech32 = "1.2.0"
coincurve = ">=18.0.0"
mnemonic = "*"
aiohttp = ">=3.12.15"
bcrypt = "*"
portalocker = ">=2.8"
nostr-sdk = ">=0.43"
websocket-client = "1.7.0"
websockets = ">=15.0.0"
tomli = "*"
pgpy = "0.6.0"
pyotp = ">=2.8.0"
pyperclip = "*"
qrcode = ">=8.2"
typer = ">=0.12.3"
fastapi = ">=0.116.0"
uvicorn = ">=0.35.0"
httpx = ">=0.28.1"
requests = ">=2.32"
python-multipart = ">=0.0.20"
orjson = "*"
argon2-cffi = "*"
PyJWT = ">=2.8.0"
slowapi = "^0.1.9"
toga-core = { version = ">=0.5.2", optional = true }
pillow = { version = "*", optional = true }
toga-gtk = { version = ">=0.5.2", optional = true }
toga-winforms = { version = ">=0.5.2", optional = true }
toga-cocoa = { version = ">=0.5.2", optional = true }

[tool.poetry.extras]
gui = ["toga-core", "pillow"]
gui-gtk = ["toga-gtk"]
gui-win = ["toga-winforms"]
gui-mac = ["toga-cocoa"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
coverage = "^7.5"
black = "^24.3"
pip-audit = "^2.7"
pytest-xdist = "^3.5"
hypothesis = "^6.98"
freezegun = "^1.5"
toga-dummy = ">=0.5.2"
Pillow = "^10.4"

[tool.poetry.scripts]
seedpass = "seedpass.cli:app"
seedpass-gui = "seedpass_gui.app:main"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.briefcase]
project_name = "SeedPass"
bundle = "io.seedpass"
version = "0.1.0"

[tool.briefcase.app.seedpass-gui]
formal-name = "SeedPass"
description = "Deterministic password manager with a BeeWare GUI"
sources = ["src/seedpass_gui"]
requires = [
    "toga-core>=0.5.2",
    "colorama>=0.4.6",
    "termcolor>=1.1.0",
    "cryptography>=40.0.2",
    "bip-utils>=2.5.0",
    "bech32==1.2.0",
    "coincurve>=18.0.0",
    "mnemonic",
    "aiohttp>=3.12.15",
    "bcrypt",
    "portalocker>=2.8",
    "nostr-sdk>=0.43",
    "websocket-client==1.7.0",
    "websockets>=15.0.0",
    "tomli",
    "pgpy==0.6.0",
    "pyotp>=2.8.0",
    "pyperclip",
    "qrcode>=8.2",
    "typer>=0.12.3",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "requests>=2.32",
    "python-multipart>=0.0.20",
    "orjson",
    "argon2-cffi",
]
icon = "logo/png/SeedPass-Logo-24.png"
license = { file = "LICENSE" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

